@@ -104,8 +104,7 @@ public class PsseValidation {
             }
         }
 
-        for (int i = 0; i < psseBuses.size(); i++) {
-            PsseBus psseBus = psseBuses.get(i);
+        for (PsseBus psseBus : psseBuses) {
             if (psseBus.getI() < 1 || psseBus.getI() > 999997) {
                 warnings.add(String.format("Bus: Unexpected I: %d", psseBus.getI()));
                 validCase = false;
@@ -120,8 +119,7 @@ public class PsseValidation {
     private void validateLoads(List<PsseLoad> loads, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesLoads = new HashMap<>();
 
-        for (int i = 0; i < loads.size(); i++) {
-            PsseLoad load = loads.get(i);
+        for (PsseLoad load : loads) {
             if (!buses.containsKey(load.getI())) {
                 warnings.add(String.format("Load: Unexpected I: %d", load.getI()));
                 validCase = false;
@@ -135,8 +133,7 @@ public class PsseValidation {
     private void validateFixedShunts(List<PsseFixedShunt> fixedShunts, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesFixedShunts = new HashMap<>();
 
-        for (int i = 0; i < fixedShunts.size(); i++) {
-            PsseFixedShunt fixedShunt = fixedShunts.get(i);
+        for (PsseFixedShunt fixedShunt : fixedShunts) {
             if (!buses.containsKey(fixedShunt.getI())) {
                 warnings.add(String.format("FixedShunt: Unexpected I: %d", fixedShunt.getI()));
                 validCase = false;
@@ -151,8 +148,7 @@ public class PsseValidation {
 
         Map<String, List<String>> busesGenerators = new HashMap<>();
 
-        for (int i = 0; i < generators.size(); i++) {
-            PsseGenerator generator = generators.get(i);
+        for (PsseGenerator generator : generators) {
             if (!buses.containsKey(generator.getI())) {
                 warnings.add(String.format("Generator: Unexpected I: %d", generator.getI()));
                 validCase = false;
@@ -190,8 +186,7 @@ public class PsseValidation {
     private void validateNonTransformerBranches(List<PsseNonTransformerBranch> nonTransformerBranches, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesNonTransformerBranches = new HashMap<>();
 
-        for (int i = 0; i < nonTransformerBranches.size(); i++) {
-            PsseNonTransformerBranch nonTransformerBranch = nonTransformerBranches.get(i);
+        for (PsseNonTransformerBranch nonTransformerBranch : nonTransformerBranches) {
             if (!buses.containsKey(nonTransformerBranch.getI())) {
                 warnings.add(String.format("NonTransformerBranch: Unexpected I: %d", nonTransformerBranch.getI()));
                 validCase = false;
@@ -212,19 +207,18 @@ public class PsseValidation {
 
     private void validateTransformers(List<PsseTransformer> transformers, Map<Integer, List<Integer>> buses) {
         List<PsseTransformer> twoWindingsTransformers = transformers.parallelStream()
-            .filter(transformer -> transformer.getK() == 0).collect(Collectors.toList());
+            .filter(transformer -> transformer.getK() == 0).toList();
         validateTwoWindingsTransformers(twoWindingsTransformers, buses);
 
         List<PsseTransformer> threeWindingsTransformers = transformers.parallelStream()
-            .filter(transformer -> transformer.getK() != 0).collect(Collectors.toList());
+            .filter(transformer -> transformer.getK() != 0).toList();
         validateThreeWindingsTransformers(threeWindingsTransformers, buses);
     }
 
     private void validateTwoWindingsTransformers(List<PsseTransformer> transformers, Map<Integer, List<Integer>> buses) {
         Map<String, List<String>> busesTransformers = new HashMap<>();
 
-        for (int i = 0; i < transformers.size(); i++) {
-            PsseTransformer transformer = transformers.get(i);
+        for (PsseTransformer transformer : transformers) {
             validateTransformerBus(buses, transformer.getI(), "I");
             validateTransformerBus(buses, transformer.getJ(), "J");
 
